# learning-spark-sdp

./: .gitignore  AGENTS.md  Justfile  README.md  docker-compose.yaml
.agents/rules/: testing-discipline.mdc
.agents/skills/delta-lake/: SKILL.md
.agents/skills/proto-to-sdp/: SKILL.md
.agents/skills/pyspark-testing/: SKILL.md
.cursor/skills/sdp-authoring/: SKILL.md
docs/: links.md
sdp-playground/: .gitignore  README.md  main.py  pyproject.toml
sdp-playground/example_pipeline/: spark-pipeline.yml
sdp-playground/example_pipeline/transformations/: example_python_materialized_view.py  example_sql_materialized_view.sql
sdp-playground/tests/: conftest.py  test_transforms.py
sdp-playground/utils/: __init__.py
zerobus-ingest/: Makefile  README.md  main.py  pyproject.toml
zerobus-ingest/config/: __init__.py
zerobus-ingest/datagen/: __init__.py  orders.py
zerobus-ingest/protos/orders/v1/: orders.proto
zerobus-ingest/src/zerobus_ingest/: main.py
zerobus-ingest/src/zerobus_ingest/datagen/: orders.py
zerobus-ingest/src/zerobus_ingest/utils/: __init__.py  table_utils.py  writer.py
zerobus-ingest/tests/: test_datagen_orders.py  test_table_utils.py  test_volume_utils.py  test_writer.py
zerobus-ingest/tests/resources/: orders_ddl.txt
