[project]
name = "sdp-playground"
version = "0.1.0"
description = "Spark Declarative Pipelines (SDP) learning playground using PySpark 4.1.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark[pipelines]==4.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["example_pipeline"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]
