[project]
name = "zerobus-ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bufbuild-protovalidate-protocolbuffers-python",
    "databricks-sdk>=0.88.0",
    "databricks-zerobus-ingest-sdk>=0.2.0",
    "protobuf>=6.33.0",
    "protovalidate>=1.1.1",
    "python-dotenv>=1.2.1",
]

[tool.uv]
extra-index-url = ["https://buf.build/gen/python"]
